[*] new QQL features